...
                                <rect key="frame" x="0.0" y="265" width="393" height="322"/>
                                <subviews>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="LPK-XO-T8l">
                                        <rect key="frame" x="146" y="0.0" width="101.33333333333331" height="37"/>
                                        <buttonConfiguration key="configuration" style="gray">
                                            <attributedString key="attributedTitle">
                                                <fragment content="Таблицы">
                                                    <attributes>
                                                        <font key="NSFont" metaFont="system" size="19"/>
                                                        <paragraphStyle key="NSParagraphStyle" alignment="justified" lineBreakMode="wordWrapping" baseWritingDirection="natural" tighteningFactorForTruncation="0.0"/>
                                                    </attributes>
                                                </fragment>
                                            </attributedString>
...
                                        </connections>
                                    </button>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="0df-Qi-aRg">
                                        <rect key="frame" x="120.33333333333333" y="57" width="152.66666666666669" height="37"/>
                                        <buttonConfiguration key="configuration" style="gray">
                                            <attributedString key="attributedTitle">
                                                <fragment content="Таблицы (Код)">
                                                    <attributes>
                                                        <font key="NSFont" metaFont="system" size="19"/>
                                                        <paragraphStyle key="NSParagraphStyle" alignment="justified" lineBreakMode="wordWrapping" baseWritingDirection="natural" tighteningFactorForTruncation="0.0"/>
                                                    </attributes>
                                                </fragment>
                                            </attributedString>
...
                                        </connections>
                                    </button>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="5kW-rY-tbe">
                                        <rect key="frame" x="82" y="171" width="229" height="37"/>
                                        <buttonConfiguration key="configuration" style="gray">
                                            <attributedString key="attributedTitle">
                                                <fragment content="Экран переводов (код)">
                                                    <attributes>
                                                        <font key="NSFont" metaFont="system" size="19"/>
                                                        <paragraphStyle key="NSParagraphStyle" alignment="justified" lineBreakMode="wordWrapping" baseWritingDirection="natural" tighteningFactorForTruncation="0.0"/>
                                                    </attributes>
                                                </fragment>
                                            </attributedString>
...
                                        </connections>
                                    </button>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="1lA-7e-g2P">
                                        <rect key="frame" x="78.333333333333329" y="228" width="236.33333333333337" height="37"/>
                                        <buttonConfiguration key="configuration" style="gray">
                                            <attributedString key="attributedTitle">
                                                <fragment content="Экран переводов (сеть)">
                                                    <attributes>
                                                        <font key="NSFont" metaFont="system" size="19"/>
                                                        <paragraphStyle key="NSParagraphStyle" alignment="justified" lineBreakMode="wordWrapping" baseWritingDirection="natural" tighteningFactorForTruncation="0.0"/>
                                                    </attributes>
                                                </fragment>
                                            </attributedString>
...
                                        </connections>
                                    </button>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="rPE-2h-P0V">
                                        <rect key="frame" x="72.333333333333329" y="285" width="248.66666666666669" height="37"/>
                                        <buttonConfiguration key="configuration" style="gray">
                                            <attributedString key="attributedTitle">
                                                <fragment content="Экран переводов (натив)">
                                                    <attributes>
                                                        <font key="NSFont" metaFont="system" size="19"/>
                                                        <paragraphStyle key="NSParagraphStyle" alignment="justified" lineBreakMode="wordWrapping" baseWritingDirection="natural" tighteningFactorForTruncation="0.0"/>
                                                    </attributes>
                                                </fragment>
                                            </attributedString>
...
